--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">PicPay</string>
     <string name="title">Contatos</string>
     <string name="error">Ocorreu um erro. Tente novamente.</string>
-
+    <string name="name_surname">Name Surname</string>
+    <string name="username">\@username</string>
+    <string name="search_hint">Procurar\n</string>
 </resources>
